name:                  readme-lhs
version:               0.1.0.0
synopsis:              See readme.lhs
description:           See readme.lhs
homepage:              https://github.com/tonyday567/readme-lhs
license:               BSD3
license-file:          LICENSE
author:                Tony Day
maintainer:            tonyday567@gmail.com
copyright:             Tony Day
category:              
build-type:            Simple
cabal-version:         >=1.10

library
  default-language:    Haskell2010
  ghc-options:         -O2
  hs-source-dirs:      src
  exposed-modules:     Readme.Lhs
  build-depends:       base
                     , protolude
                     , text
                     , foldl
  default-extensions:  NoImplicitPrelude
                     , ApplicativeDo
                     , BangPatterns
                     , BinaryLiterals
                     , DeriveFoldable
                     , DeriveFunctor
                     , DeriveGeneric
                     , DeriveTraversable
                     , DisambiguateRecordFields
                     , DuplicateRecordFields
                     , EmptyCase
                     , FlexibleContexts
                     , FlexibleInstances
                     , FunctionalDependencies
                     , GADTSyntax
                     , InstanceSigs
                     , KindSignatures
                     , LambdaCase
                     , MonadComprehensions
                     , MultiParamTypeClasses
                     , MultiWayIf
                     , NegativeLiterals
                     , OverloadedStrings
                     , ParallelListComp
                     , PartialTypeSignatures
                     , PatternSynonyms
                     , RankNTypes
                     , RecordWildCards
                     , RecursiveDo
                     , ScopedTypeVariables
                     , TupleSections
                     , TypeApplications
                     , TypeFamilies
                     , TypeOperators

executable lhs
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -O2
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
  build-depends:       base
                     , readme-lhs
                     , bytestring
                     , comonad
                     , mmorph
                     , text
                     , lens
                     , transformers
                     , optparse-applicative
                     , filepath
                     , cmdargs
                     , foldl
                     , protolude

  default-extensions:  NoImplicitPrelude
                     , ApplicativeDo
                     , BangPatterns
                     , BinaryLiterals
                     , DeriveFoldable
                     , DeriveFunctor
                     , DeriveGeneric
                     , DeriveTraversable
                     , DisambiguateRecordFields
                     , DuplicateRecordFields
                     , EmptyCase
                     , FlexibleContexts
                     , FlexibleInstances
                     , FunctionalDependencies
                     , GADTSyntax
                     , InstanceSigs
                     , KindSignatures
                     , LambdaCase
                     , MonadComprehensions
                     , MultiParamTypeClasses
                     , MultiWayIf
                     , NegativeLiterals
                     , OverloadedStrings
                     , ParallelListComp
                     , PartialTypeSignatures
                     , PatternSynonyms
                     , RankNTypes
                     , RecordWildCards
                     , RecursiveDo
                     , ScopedTypeVariables
                     , TupleSections
                     , TypeApplications
                     , TypeFamilies
                     , TypeOperators
  default-language:    Haskell2010

executable readme
  default-language:    Haskell2010
  ghc-options:         -O2
  hs-source-dirs:      ./
  main-is:             readme.lhs
  build-depends:       base
                     , protolude
                     , text
                     , foldl
  default-extensions:  NoImplicitPrelude
                     , ApplicativeDo
                     , BangPatterns
                     , BinaryLiterals
                     , DeriveFoldable
                     , DeriveFunctor
                     , DeriveGeneric
                     , DeriveTraversable
                     , DisambiguateRecordFields
                     , DuplicateRecordFields
                     , EmptyCase
                     , FlexibleContexts
                     , FlexibleInstances
                     , FunctionalDependencies
                     , GADTSyntax
                     , InstanceSigs
                     , KindSignatures
                     , LambdaCase
                     , MonadComprehensions
                     , MultiParamTypeClasses
                     , MultiWayIf
                     , NegativeLiterals
                     , OverloadedStrings
                     , ParallelListComp
                     , PartialTypeSignatures
                     , PatternSynonyms
                     , RankNTypes
                     , RecordWildCards
                     , RecursiveDo
                     , ScopedTypeVariables
                     , TupleSections
                     , TypeApplications
                     , TypeFamilies
                     , TypeOperators

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             test.lhs
  build-depends:       base >= 4 && < 5
                     , tasty
                     , HUnit
                     , tasty-hunit
                     , readme-lhs
                     , protolude
                     , text
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                     , ApplicativeDo
                     , BangPatterns
                     , BinaryLiterals
                     , DeriveFoldable
                     , DeriveFunctor
                     , DeriveGeneric
                     , DeriveTraversable
                     , DisambiguateRecordFields
                     , DuplicateRecordFields
                     , EmptyCase
                     , FlexibleContexts
                     , FlexibleInstances
                     , FunctionalDependencies
                     , GADTSyntax
                     , InstanceSigs
                     , KindSignatures
                     , LambdaCase
                     , MonadComprehensions
                     , MultiParamTypeClasses
                     , MultiWayIf
                     , NegativeLiterals
                     , OverloadedStrings
                     , ParallelListComp
                     , PartialTypeSignatures
                     , PatternSynonyms
                     , RankNTypes
                     , RecordWildCards
                     , RecursiveDo
                     , ScopedTypeVariables
                     , TupleSections
                     , TypeApplications
                     , TypeFamilies
                     , TypeOperators

source-repository head
  type:     git
  location: https://github.com/tonyday567/readme-lhs
