name:
  readme-lhs
version:
  0.1.0.0
synopsis:
  See readme.lhs
homepage:
  https://github.com/tonyday567/readme-lhs
license:
  BSD3
license-file:
  LICENSE
author:
  Tony Day
maintainer:
  tonyday567@gmail.com
copyright:
  2016 Tony Day
category:
  Development              
build-type:
  Simple
cabal-version:
  >=1.14

library
  default-language:
    Haskell2010
  ghc-options:
    -O2
  hs-source-dirs:
    src
  exposed-modules:
    Readme.Lhs
  build-depends:
    base,
    protolude,
    foldl,
    text,
    attoparsec
  default-extensions:
    NoImplicitPrelude,
    UnicodeSyntax,
    BangPatterns,
    BinaryLiterals,
    DeriveFoldable,
    DeriveFunctor,
    DeriveGeneric,
    DeriveTraversable,
    DisambiguateRecordFields,
    EmptyCase,
    FlexibleContexts,
    FlexibleInstances,
    FunctionalDependencies,
    GADTSyntax,
    InstanceSigs,
    KindSignatures,
    LambdaCase,
    MonadComprehensions,
    MultiParamTypeClasses,
    MultiWayIf,
    NegativeLiterals,
    OverloadedStrings,
    ParallelListComp,
    PartialTypeSignatures,
    PatternSynonyms,
    RankNTypes,
    RecordWildCards,
    RecursiveDo,
    ScopedTypeVariables,
    TupleSections,
    TypeFamilies,
    TypeOperators
  if impl(ghc>=8.0.1)
    default-extensions:
      ApplicativeDo,
      DuplicateRecordFields,
      TypeApplications

executable lhs
  default-language:
    Haskell2010
  hs-source-dirs:
    app
  main-is:
    Main.hs
  ghc-options:
    -O2
    -threaded
    -rtsopts
    -with-rtsopts=-N
  build-depends:
    base,
    protolude,
    readme-lhs,
    optparse-applicative,
    filepath,
    text,
    containers
  default-language:
    Haskell2010
  default-extensions:
    NoImplicitPrelude,
    UnicodeSyntax,
    BangPatterns,
    BinaryLiterals,
    DeriveFoldable,
    DeriveFunctor,
    DeriveGeneric,
    DeriveTraversable,
    DisambiguateRecordFields,
    EmptyCase,
    FlexibleContexts,
    FlexibleInstances,
    FunctionalDependencies,
    GADTSyntax,
    InstanceSigs,
    KindSignatures,
    LambdaCase,
    MonadComprehensions,
    MultiParamTypeClasses,
    MultiWayIf,
    NegativeLiterals,
    OverloadedStrings,
    ParallelListComp,
    PartialTypeSignatures,
    PatternSynonyms,
    RankNTypes,
    RecordWildCards,
    RecursiveDo,
    ScopedTypeVariables,
    TupleSections,
    TypeFamilies,
    TypeOperators

  if impl(ghc>=8.0.1)
    default-extensions:
      ApplicativeDo,
      DuplicateRecordFields,
      TypeApplications

executable readme
  default-language:
    Haskell2010
  ghc-options:
    -O2
  hs-source-dirs:
    ./
  main-is:
    readme.lhs
  build-depends:
    base,
    protolude,
    text,
    foldl
  default-extensions:
    NoImplicitPrelude,
    UnicodeSyntax,
    BangPatterns,
    BinaryLiterals,
    DeriveFoldable,
    DeriveFunctor,
    DeriveGeneric,
    DeriveTraversable,
    DisambiguateRecordFields,
    EmptyCase,
    FlexibleContexts,
    FlexibleInstances,
    FunctionalDependencies,
    GADTSyntax,
    InstanceSigs,
    KindSignatures,
    LambdaCase,
    MonadComprehensions,
    MultiParamTypeClasses,
    MultiWayIf,
    NegativeLiterals,
    OverloadedStrings,
    ParallelListComp,
    PartialTypeSignatures,
    PatternSynonyms,
    RankNTypes,
    RecordWildCards,
    RecursiveDo,
    ScopedTypeVariables,
    TupleSections,
    TypeFamilies,
    TypeOperators

  if impl(ghc>=8.0.1)
    default-extensions:
      ApplicativeDo,
      DuplicateRecordFields,
      TypeApplications

test-suite test
  default-language:
    Haskell2010
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    test
  main-is:
    test.lhs
  build-depends:
    base >= 4 && < 5,
    protolude,
    tasty,
    HUnit,
    tasty-hunit,
    readme-lhs,
    text
  default-extensions:
    NoImplicitPrelude,
    UnicodeSyntax,
    BangPatterns,
    BinaryLiterals,
    DeriveFoldable,
    DeriveFunctor,
    DeriveGeneric,
    DeriveTraversable,
    DisambiguateRecordFields,
    EmptyCase,
    FlexibleContexts,
    FlexibleInstances,
    FunctionalDependencies,
    GADTSyntax,
    InstanceSigs,
    KindSignatures,
    LambdaCase,
    MonadComprehensions,
    MultiParamTypeClasses,
    MultiWayIf,
    NegativeLiterals,
    OverloadedStrings,
    ParallelListComp,
    PartialTypeSignatures,
    PatternSynonyms,
    RankNTypes,
    RecordWildCards,
    RecursiveDo,
    ScopedTypeVariables,
    TupleSections,
    TypeFamilies,
    TypeOperators

  if impl(ghc>=8.0.1)
    default-extensions:
      ApplicativeDo,
      DuplicateRecordFields,
      TypeApplications

source-repository head
  type:
    git
  location:
    https://github.com/tonyday567/readme-lhs
